tests/behavior/error/optional_get_mut_value_ref1.bz
function main()
{
	mut i: ?i32 = null;

	__builtin_optional_get_mut_value_ref(i);
}
